fixed background so it covers more and works better for multiple sized screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,8 +13,10 @@ html {
 }
 
 .background  {
-	width:100%;
-	overflow:auto;
+	background-image: url("../images/Louvre-Museum-Paris.jpg");
+	background-size: cover;
+	min-width: 100%;
+	min-height: 900px; 
 }
 
 
